<resources>
    <string name="app_name">Phone Note</string>
    <string name="action_settings">Settings</string>

    <string name="backupnow">BACK UP NOW</string>
    <string name="backup">Backup</string>
    <string name="credits">Credits</string>
    <string name="backupdropbox">Backup with Dropbox</string>
    <string name="account">Account</string>
    <string name="edittext_hint">Enter message</string>
    <string name="version">Version </string>
    <string name="nava_com">Navatrana - 2016</string>

    <!-- Menu Items -->

    <string name="menu_share">Share</string>
    <string name="menu_about">About</string>
    <string name="menu_help">Help &amp; Feedback</string>
    <string name="menu_report">Report Bug</string>
    <string name="menu_settings">Settings</string>

    <!-- Permissions Alert Window -->

    <string name="alert_title">Let Phone Note Contacts?</string>
    <string name="alert_message">This lets you choose a contact to save a note.</string>
    <string name="alert_setting">Settings</string>

    <string name="extra_share_subject">Try Phone Note for Android!</string>
    <string name="extra_mail_subject">Phone Note : Help &amp; Feedback</string>
    <string name="extra_mail_bug_subject">Phone Note : Report Bug</string>
    <string name="mailto_id">vamc.1991&#64;gmail.com</string>
    <string name="extra_text">Get Phone Note so you never forget what to ask when someone calls.</string>
    <string name="about_text">
        Thank you for downloading Phone Note. Phone Note helps attach notes to your contacts.\n
        The app is still in development stage. There are features like multi-language support,
        cloud storage and many more features coming soon. While you wait, your feedback and ideas, if any, will be appreciated.
        Look for out more updates.
    </string>
</resources>
